ops/k8s/manifests/touca-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: touca-api
  name: touca-api
  namespace: touca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: touca-api
  template:
    metadata:
      labels:
        app: touca-api
    spec:
      containers:
      - image: touca/touca-api:1.4.0
        name: touca-api
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /opt/local/logs/api
          name: api-volume
      volumes:
      - name: api-volume
        persistentVolumeClaim:
          claimName: touca-ebs
