ops/k8s/manifests/touca-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: touca-app
  name: touca-app
  namespace: touca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: touca-app
  template:
    metadata:
      labels:
        app: touca-app
    spec:
      containers:
        - image: touca/touca:2.0.0
          name: touca-app
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
