ops/k8s/manifests/touca-cmp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    cmp: touca-cmp
  name: touca-cmp
  namespace: touca
spec:
  replicas: 1
  selector:
    matchLabels:
      cmp: touca-cmp
  template:
    metadata:
      labels:
        cmp: touca-cmp
    spec:
      containers:
        - image: touca/touca-cmp:1.4.0
          name: touca-cmp
          volumeMounts:
            - mountPath: /var/log/cmp
              name: cmp-volume
      volumes:
        - name: cmp-volume
          persistentVolumeClaim:
            claimName: touca-ebs
