ops/k8s/manifests/touca-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: touca-minio
  name: touca-minio
  namespace: touca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: touca-minio
  template:
    metadata:
      labels:
        app: touca-minio
    spec:
      containers:
      - image: minio/minio:RELEASE.2021-03-17T02-33-02Z
        name: touca-minio
        command: [ "minio"]
        args: [ "server", "/data"]
        volumeMounts:
        - mountPath: /data/
          name: minio-volume
      volumes:
      - name: minio-volume
        persistentVolumeClaim:
          claimName: touca-ebs
