ops/k8s/manifests/touca-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: touca-mongo
  name: touca-mongo
  namespace: touca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: touca-mongo
  template:
    metadata:
      labels:
        app: touca-mongo
    spec:
      containers:
    #  - image: mongo:4-bionic
      - image: mongo:5.0.10
        name: touca-mongo
        ports:
        - containerPort: 27017
        args: [ "--config", "/etc/mongod.conf"]
        volumeMounts:
        - mountPath: /data/db
          name: mongo-volume
        - mountPath: /etc/mongod.conf
          subPath: mongod.conf
          name: mongod-conf
          readOnly: true
        - mountPath: /docker-entrypoint-initdb.d/
          name: mongo-initdb
          readOnly: true
      volumes:
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: touca-ebs
      - name: mongod-conf
        configMap:
          name: mongod-conf
      - name: mongo-initdb
        configMap:
          name: mongo-entrypoint
