ops/k8s/manifests/touca-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: touca-api
  name: touca-api
  namespace: touca
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: touca-api
