ops/k8s/manifests/touca-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: touca-app
  name: touca-app
  namespace: touca
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: touca-app
