ops/k8s/manifests/touca-minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: touca-minio
  name: touca-minio
  namespace: touca
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: touca-minio
