ops/k8s/manifests/touca-mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: touca-mongo
  name: touca-mongo
  namespace: touca
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: touca-mongo
