ops/k8s/manifests/touca-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: touca-redis
  name: touca-redis
  namespace: touca
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: touca-redis
